Fix jumping of bg image of site on mobile scroll v1.1

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -32,6 +32,7 @@ body{
 }
 .body-bg {
   position: absolute;
+  height: 100vh;
   top: 0;
   left: 0;
   right: 0;
